# facial-expression-analysis-main

./: .gitattributes  README_DLL.md  build_all.bat  run_test.bat
cpp_test/: CMakeLists.txt  COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  build.bat  build.sh  compare_with_cpp.py  config.txt  generate_reference.py  test_all.bat  test_dll_direct.cpp
cpp_test/build_dll/: ALL_BUILD.vcxproj  CMakeCache.txt  FacialExpressionAnalysis.sln  FacialExpressionAnalysis.vcxproj  FacialExpressionAnalysis.vcxproj.filters  FacialExpressionAnalysisDLL.vcxproj  FacialExpressionAnalysisDLL.vcxproj.filters  FacialExpressionAnalysisDLLDirectTest.vcxproj  FacialExpressionAnalysisDLLDirectTest.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cpp_test/build_dll/FacialExpressionAnalysis.dir/Release/: FacialExpressionAnalysis.exe.recipe
cpp_test/build_dll/FacialExpressionAnalysis.dir/Release/FacialEx.B918B487.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_test/build_dll/FacialExpressionAnalysisDLL.dir/Release/: FacialExpressionDLL.dll.recipe
cpp_test/build_dll/FacialExpressionAnalysisDLL.dir/Release/FacialEx.7B18A084.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_test/build_dll/FacialExpressionAnalysisDLLDirectTest.dir/Release/: FacialExpressionAnalysisDLLDirectTest.exe.recipe
cpp_test/build_dll/FacialExpressionAnalysisDLLDirectTest.dir/Release/FacialEx.D1E987C6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_test/build_dll/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp_test/build_dll/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
cpp_test/build_dll/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp_test/build_dll/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
cpp_test/include/: emotion_analyzer.h  emotion_analyzer_new.h  facial_expression_dll.h  facial_landmarks.h  model_comparison.h  utils.h
cpp_test/src/: emotion_analyzer.cpp  emotion_analyzer_backup.cpp  emotion_analyzer_clean.cpp  facial_expression_dll.cpp  facial_landmarks.cpp  main.cpp  main_backup.cpp  main_clean.cpp  model_comparison.cpp  simple_test.cpp  test_dll_direct.cpp  utils.cpp
csharp_test/: DiagnosticTest.cs  DiagnosticTest.csproj  FacialExpressionAPI.cs  FacialExpressionTest.csproj  FullTest.cs  FullTest.csproj  InitTest.cs  InitTest.csproj  Program.cs  SimpleTest.cs  SimpleTest.csproj  StringTest.cs  StringTest.csproj  TestFunctionTest.cs  TestFunctionTest.csproj  dll_test.cpp  model_frontalization.npy
data/: Morphset.csv
models/: model_emotion_pls=30_fullfeatures=False_py312.joblib
source/: analyze_npy_detailed.py  check_all_models.py  convert_to_onnx.py  debug_feature_template.py  debug_landmark_bug.py  debug_pleased.py  debug_simple.py  generate_npy_report.py  npy_analysis_report.txt  read_npy_info.py  test_onnx_model.py  test_upgraded_model.py
